RESOLVED FIXED205580
[Web Animations] REGRESSION: Changing the animation-duration of a CSS Animation may not resume it
https://bugs.webkit.org/show_bug.cgi?id=205580
Summary [Web Animations] REGRESSION: Changing the animation-duration of a CSS Animati...
Antoine Quint
Reported 2019-12-24 04:23:49 PST
If you have a CSS Animation set up with no duration, then with one, then without one and then with one again, it will run once only.
Attachments
Patch (6.29 KB, patch)
2019-12-24 04:34 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-12-24 04:23:59 PST
Antoine Quint
Comment 2 2019-12-24 04:34:52 PST
WebKit Commit Bot
Comment 3 2019-12-24 10:35:55 PST
Comment on attachment 386389 [details] Patch Clearing flags on attachment: 386389 Committed r253901: <https://trac.webkit.org/changeset/253901>
WebKit Commit Bot
Comment 4 2019-12-24 10:35:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.