[Web Animations] REGRESSION: Changing the animation-duration of a CSS Animation may not resume it https://bugs.webkit.org/show_bug.cgi?id=205580 <rdar://problem/58127956>

Patch by Antoine Quint <graouts@apple.com> on 2019-12-24
Reviewed by Dean Jackson.

Source/WebCore:

Test: webanimations/css-animation-dynamic-duration-change.html

Setting the animation-duration of an animation will transition the animation back into its idle state
and the "update animations and send events" procedure would remove that animation from the timeline.
It would also remove it from the map that would associate an animation with a given CSS Animation name
so that we would know whether an animation exists for a given animation name when one of the animation's
properties changed. Since that animation was (mistakenly) removed, we would fail to update its timing
and it would never be resumed. We now only update the CSS Animation name to animation map when styles
change.

* animation/AnimationTimeline.cpp:
(WebCore::AnimationTimeline::animationWasRemovedFromElement):

LayoutTests:

Add a new test that, by virtue of changing the animation-duration, transitions a CSS Animation from
idle, to running, back to idle and back to running. Prior to this change, the test would not perform
the final play state transition and the it would time out.

* webanimations/css-animation-dynamic-duration-change-expected.txt: Added.
* webanimations/css-animation-dynamic-duration-change.html: Added.

Canonical link: https://commits.webkit.org/218777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253901 268f45cc-cd09-0410-ab3c-d52691b4dbfc